working on auth : add controller routs validators

--- a/backend/config/.env.development
+++ b/backend/config/.env.development
@@ -7,6 +7,9 @@ PORT=3000
 HOST=localhost
 MONGO_URI=mongodb://localhost:27017/barbershop
 
+## JWT ##
+JWT_SECRET=change_me
+
 ## Setup jet-logger ##
 JET_LOGGER_MODE=CONSOLE
 JET_LOGGER_FILEPATH=jet-logger.log
