--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,27 +2,28 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "lib": ["ES2020"],                   
+    "lib": ["ES2020"],
     "strict": true,
     "baseUrl": "./",
-    "esModuleInterop": true,                 
-    "skipLibCheck": true,                     
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "paths": {
       "@src/*": ["src/*"]
     },
     "useUnknownInCatchVariables": false,
-    "types": ["vitest/globals"],
+    "types": ["vitest/globals", "zod"]
   },
   "ts-node": {
     "swc": true,
     "require": [
       "tsconfig-paths/register",
       "./config.ts"
-    ],
+    ]
   },
   "include": [
     "src/**/*.ts",
+    "src/**/*.d.ts",
     "tests/**/*.ts",
     "config.ts",
     "scripts",
