--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/index.js",
     "type-check": "tsc --noEmit",
     "lint": "eslint .",
-    "dev:hot": "nodemon --exec \"npm run dev\" --watch ./src --ext .ts"
+    "dev:hot": "nodemon --exec \"npm run dev\" --watch ./src --ext .ts",
+    "seed": "tsx -r ./src/config/loadEnv.ts scripts/seed.ts"
   },
   "engines": {
     "node": ">=16.0.0"
