--- a/backend/package.json
+++ b/backend/package.json
@@ -27,11 +27,15 @@
     "jet-logger": "^2.0.1",
     "jet-paths": "^1.1.0",
     "jet-validators": "^1.4.3",
+    "js-yaml": "^4.1.0",
     "jsonfile": "^6.2.0",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "mongoose": "^8.19.2",
     "morgan": "^1.10.1",
+    "openapi-types": "^12.1.3",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -43,12 +47,15 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/find": "^0.2.4",
     "@types/fs-extra": "^11.0.4",
+    "@types/js-yaml": "^4.0.9",
     "@types/jsonfile": "^6.1.4",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/module-alias": "^2.0.4",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.9.1",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/yamljs": "^0.2.34",
     "eslint": "^9.38.0",
     "eslint-plugin-n": "^17.23.1",
     "find": "^0.3.0",
