--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,36 +1,29 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
-    "lib": ["ES2020"],
+    "module": "commonjs",
+    "moduleResolution": "node",
     "strict": true,
-    "baseUrl": "./",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+
+    "outDir": "dist",
+    "baseUrl": ".",
     "paths": {
       "@src/*": ["src/*"]
     },
-    "useUnknownInCatchVariables": false,
-    "types": ["vitest/globals", "zod"]
-  },
-  "ts-node": {
-    "swc": true,
-    "require": [
-      "tsconfig-paths/register",
-      "./config.ts"
-    ]
+
+    /* 👇 make Jest/Vitest globals like describe/it/expect available to TS */
+    "types": ["node", "jest"]
   },
   "include": [
     "src/**/*.ts",
-    "src/**/*.d.ts",
-    "tests/**/*.ts",
-    "config.ts",
-    "scripts",
-    "eslint.config.ts",
-    "vitest.config.mts"
+    "test/**/*.ts",
+    "jest.config.ts"
   ],
-  "exclude": [
-    "src/public/*"
-  ]
+  "exclude": ["node_modules", "dist"]
 }
