--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-
+    "isolatedModules": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
 
@@ -17,7 +17,6 @@
       "@src/*": ["src/*"]
     },
 
-    /* 👇 make Jest/Vitest globals like describe/it/expect available to TS */
     "types": ["node", "jest"]
   },
   "include": [
