--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -22,7 +22,8 @@
   "include": [
     "src/**/*.ts",
     "test/**/*.ts",
-    "jest.config.ts"
+    "jest.config.ts",
+    "scripts/**/*.ts"
   ],
   "exclude": ["node_modules", "dist"]
 }
