--- a/backend/package.json
+++ b/backend/package.json
@@ -54,6 +54,7 @@
     "@swc/core": "^1.13.5",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.10",
+    "@types/express": "^5.0.5",
     "@types/find": "^0.2.4",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^30.0.0",
