fix api baseURL for production

--- a/backend/config/.env.development
+++ b/backend/config/.env.development
@@ -5,7 +5,7 @@ NODE_ENV=development
 ## Server ##
 PORT=4000
 HOST=localhost
-MONGO_URI=mongodb+srv://ayhamalaaeddin1_db_user:Vu49rK7unQxNBw5I@cluster0.uqyzf9u.mongodb.net/?appName=Cluster0
+MONGO_URI=mongodb://localhost:27017/barbershop
 
 ## JWT ##
 JWT_SECRET=change_me
