--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.6",
+    "aos": "^2.3.4",
     "axios": "^1.13.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.554.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
@@ -31,6 +33,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/aos": "^3.0.7",
     "@types/jest": "^29.5.14",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
