--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "test:cov:open": "jest --coverage && open coverage/lcov-report/index.html"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-query": "^5.90.6",
     "aos": "^2.3.4",
     "axios": "^1.13.1",
